kustomize/overlays/uat/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapproxy-deployment
  labels:
    app: mapproxy-deployment
spec:
  selector:
    matchLabels:
      app: mapproxy-deployment
  template:
    metadata:
      labels:
        app: mapproxy-deployment
    spec:
      containers:
      - name: mapproxy
        volumeMounts:
          - mountPath: /app/config
            name: mapproxy-configmap
          - mountPath: /cache_data
            name: mapproxy-cache
      volumes:
        - name: mapproxy-configmap
          configMap:
            name: mapproxy-configmap-uat
            defaultMode: 292
            optional: false
        - name: mapproxy-cache
          persistentVolumeClaim:
            claimName: mapproxy-cache-uat
