kustomize/overlays/uat/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapproxy-clusterip
spec:
  type: ClusterIP
  selector:
    app: mapproxy-deployment
    variant: uat
