kustomize/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapproxy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mapproxy-uat.dbca.wa.gov.au
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mapproxy-clusterip-uat
            port:
              number: 8080
